HOTFIX: Fix setup card alignment issue by using 100dvh on container

--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@ html, body {
 /* Fullscreen Container */
 .app-container-fullscreen {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
